@@ -41,7 +41,7 @@ public class ProductAdminController {
                                @RequestParam(defaultValue = "10") int size,
                                Model model) {
         int safePage = Math.max(page, 0);
-        int safeSize = Math.min(Math.max(size, 1), 100);
+        int safeSize = Math.clamp(size, 1, 100);
 
         Page<ProductResDto> productPage =
                 productService.searchProducts(name, categoryId, type, isAvailable, safePage, safeSize);
